hphp/hack/test/typecheck/argument_unpacking/unpack_call12_infer.php.exp
File "unpack_call12_infer.php", line 18, characters 21-22:
Invalid argument (Typing[4110])
  File "unpack_call12_infer.php", line 22, characters 32-34:
  This is an int
  File "unpack_call12_infer.php", line 15, characters 16-20:
  It is incompatible with a string
  File "hhi_lib__srcs/hackarray.hhi", line 13, characters 61-61:
    via this generic T
  File "hhi_lib__srcs/interfaces.hhi", line 118, characters 84-85:
    via this generic Tv
  File "hhi_lib__srcs/rx/interfaces.hhi", line 35, characters 33-34:
    via this generic Tv
  File "hhi_lib__srcs/rx/interfaces.hhi", line 26, characters 49-50:
    via this generic Tv
